[project]
name = "tpms-tools"
version = "0.1.0"
description = "Tools for encoding TPMS signals as a way to analyze these protocols further"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "pyqt5>=5.15.11",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
